--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
