--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "meteor-node-stubs": "~0.2.0",
+    "node-uuid": "^1.4.7",
     "react": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.0.2",
