Export function to determine full image URL

--- a/settings-sample.json
+++ b/settings-sample.json
@@ -1,6 +1,8 @@
 {
-  "S3Bucket": "my-bucket",
-  "S3Region": "ap-southeast-1",
+  "public": {
+    "S3Bucket": "my-bucket",
+    "S3Region": "ap-southeast-1"
+  },
   "AWSAccessKeyId": "hello",
   "AWSSecretAccessKey": "world"
 }
