Install react-sortablejs

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.0.2",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "react-sortablejs": "^1.0.1",
+    "sortablejs": "^1.4.2"
   }
 }
