--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "knox": "^0.9.2",
     "meteor-node-stubs": "~0.2.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.2",
